--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -32,8 +33,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/socket.io-client": "^3.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "install": "^0.13.0",
+    "npm": "^10.8.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
